--- a/ResponsiveDesign/desafioLayoutShifter/style.css
+++ b/ResponsiveDesign/desafioLayoutShifter/style.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #000000;
-  --secondary-color: #3ce244;
+  --secondary-color: #556223;
+  --important-color: #3ce244;
 }
 
 * {
@@ -16,11 +17,12 @@ html {
 }
 
 header {
-  height: 10vh;
+  height: 15vh;
   background-color: var(--primary-color);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 .logo {
@@ -33,13 +35,21 @@ header {
   height: 60px;
 }
 
+nav {
+  width: 100%;
+  visibility: hidden;
+}
+
 .main-nav {
   display: flex;
+  flex-flow: wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding: revert;
 }
 
 .main-nav__item {
   list-style: none;
-  margin: 0.5rem;
   font-size: 1.4rem;
   text-align: center;
 }
@@ -47,13 +57,18 @@ header {
 .main-nav__item a {
   color: #fff;
   font-size: 1.2rem;
-  padding: 5px;
-  border-radius: 2px;
   text-decoration: none;
 }
 
 .main-nav__item a:hover {
   color: var(--secondary-color);
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: #fff;
 }
 
 .element {
@@ -69,7 +84,6 @@ header {
   background-position: top center;
   text-align: center;
   min-height: 30vh;
-
   font-size: 2rem;
   font-family: "Oswald", Helvetica, Arial, sans-serif;
 }
@@ -93,7 +107,7 @@ header {
 }
 
 .btn-contact {
-  background-color: var(--secondary-color);
+  background-color: var(--important-color);
   padding: 10px;
   border-radius: 10px;
 }
@@ -117,7 +131,8 @@ header {
 .c1 p,
 .c2 p,
 .c3 p,
-.c4 p {
+.c4 p,
+.c5 p {
   font-size: 1.8rem;
 }
 
@@ -135,6 +150,24 @@ header {
   background-position: top center;
   text-align: center;
   height: inherit;
+}
+
+.c5 {
+  color: var(--primary-color);
+}
+
+.c5 ul li {
+  font-size: 1.6rem;
+  margin: 0 0 0 1.5rem;
+}
+
+.hiring-announce {
+  text-align: center;
+  margin: 2rem;
+}
+
+.hiring-announce h1 {
+  color: var(--secondary-text-color);
 }
 
 footer {
